--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,28 @@
 services:
-  mysql:
-    image: 'mysql:latest'
-    environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+  app:
+    image: maven:3.9.9-eclipse-temurin-21-alpine
+    container_name: app
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: >
+      sh -c "mvn clean package && java -jar target/usuario-1.0.jar"
     ports:
-      - '3306'
+      - "9090:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/app?createDatabaseIfNotExist=true
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=12345678
+    depends_on:
+      - db
+
+  db:
+    image: mysql:latest
+    container_name: db
+    environment:
+      MYSQL_ROOT_PASSWORD: 87654321
+      MYSQL_DATABASE: app
+      MYSQL_USER: user
+      MYSQL_PASSWORD: 12345678
+    ports:
+      - "3306:3306"
